--- a/Unibo-Template-main/src/Template.Web/Views/Shared/_Layout.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Views/Shared/_Layout.cshtml
@@ -25,8 +25,9 @@
                     {
                         <a class="menu-item" href="@Url.Action(MVC.Dipendenti.Users.Index())">Le mie richieste</a>
                     }
-                    <a class="menu-item" href="@Url.Action(MVC.Dipendenti.Users.SmartWorking())">SmartWorking</a>
                     <a class="menu-item" href="@Url.Action(MVC.Dipendenti.Users.Ferie())">Richiedi Ferie</a>
+                    <a class="menu-item" href="@Url.Action(MVC.Dipendenti.Users.SmartWorking())">SmartWorking</a>
+                    <a class="menu-item" href="@Url.Action(MVC.Dipendenti.Users.Permessi())">Richiedi Permessi</a>
                 </div>
 
 
