--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -123,7 +123,7 @@
                 <thead>
                     <tr class="sticky-column-d">
                         <th class="th-d" scope="col">Data</th>
-                        <th class="th-d" scope="col">Ore Permessi</th
+                        <th class="th-d" scope="col">Ore Permessi</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
