--- a/Unibo-Template-main/src/Template.Web/Views/Shared/_Layout.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse flex-wrap" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse flex-wrap icon" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ms-auto onit-page-menu-user">
                         @if (identitaCorrente != null)
                         {
