--- a/Unibo-Template-main/src/Template.Web/Views/Shared/_Layout.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Views/Shared/_Layout.cshtml
@@ -43,12 +43,12 @@
                                     <img class="user-profile-picture" src="@identitaCorrente.GravatarUrl" />
                                     <span class="user-name">@identitaCorrente.NomeCognome</span>
                                 </a>
-                                <div class="dropdown-menu dropdown-menu-dark dropdown-menu-end" role="menu">
+                                <div class="dropdown-menu dropdown-menu-dark dropdown-menu-end horizontal-menu" role="menu">
                                     <a class="dropdown-item" href="javascript:void(0)" onclick="javascript: document.getElementById('POST_LogOut').submit()" title="@SharedLocalizer["Chiudi sessione di lavoro"]">
                                         <i class="fa-solid fa-right-from-bracket"></i>&nbsp;@SharedLocalizer["Esci"]
                                     </a>
-                                    <form autocomplete="off" method="post" action="@Url.Action(MVC.Login.Logout())" id="POST_LogOut" display="none"></form>
                                 </div>
+                                <form autocomplete="off" method="post" action="@Url.Action(MVC.Login.Logout())" id="POST_LogOut" display="none"></form>
                             </li>
                         }
                     </ul>
