add ttitle and icon

--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
@@ -42,7 +42,8 @@
     </div>
 }
 
-<div class="content-wrapper content-table">
+@section pageSubtitle {
+    <div class="content-wrapper content-table">
     <div class="table-container" id="scrolling-container">
         <div class="table-scroll">
             <table class="table">
@@ -113,6 +114,7 @@
         <span class="legend-item P">P(ore): Permesso</span>
     </div>
 </div>
+}
 
 @section Scripts {
     <script>
