--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/ManageRequest.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/ManageRequest.cshtml
@@ -4,7 +4,8 @@
     <h1>Richieste in attesa di essere valutate</h1>
 }
 
-<div>
+@section pageSubtitle {
+    <div>
     <table class="table table-success table-striped">
         <thead>
             <tr>
@@ -43,3 +44,4 @@
         </tbody>
     </table>
 </div>
+}
